--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ CSS">
 </head>
 
 <body>
+
+    <video id="background-video" autoplay loop muted poster="">
+        <source src="assets/img/portfolio/production ID_4300496_compressed.mp4" type="video/mp4">
+    </video>
     <div class="container">
         <!--Section1-->
 
@@ -26,11 +30,9 @@ CSS">
 
             <h1 class="section-1-heading"><span class="span-title">Hello! I'm Ihab </span><br>Software Developer</h1>
             <br><br>
-
         </section>
         <!--End of Section1-->
 
-        <!--section-2-->
         <section class="About-me" id="About">
             <h2 class="about-title">About</h2><br>
             <p class="About-text">
@@ -50,8 +52,7 @@ CSS">
                 <a href="IhabAbouDiab.Resume.pdf" target="blank">View Resume</a>
             </div>
         </section>
-        <!--end of section-2-->
-
+        end of section-2-->
         <!--section-3-->
         <section class="cards" id="Skills">
 
