--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ CSS">
             </p>
             <br>
             <div class="button">
-                <a href="IhabAbouDiab.Resume.pdf" target="blank">View Resume</a>
+                <a href="./IhabAbouDiabResume1.pdf" target="blank">View Resume</a>
             </div>
         </section>
         end of section-2-->
