--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ CSS">
                 <a href="./IhabAbouDiabResume1.pdf" target="blank">View Resume</a>
             </div>
         </section>
-        end of section-2-->
+        <!--end of section-2-->
         <!--section-3-->
         <section class="cards" id="Skills">
 
